# Olio-ohjelmointi-kevat-2025

./: README.md
Vko6.1/: CMakeLists.txt  main.cpp  student.cpp  student.h
vko1/: main.cpp  viikkotehtava1.pptx
vko2/: viikkotehtava 2.pptx
vko2/Arpapeli-olio/: game.cpp  game.h  main.cpp  peli.h  vko2-arpapeli.cpp
vko3/vko3-real/: ItalianChef.cpp  chef.cpp  chef.h  italian_chef.h  main.cpp  vko3-real.pro
vko4/: korjattuViikkotehtava 4.pptx
vko4/Pankkitili/: asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
vko7/: mainwindow.cpp  mainwindow.h  mainwindow.ui
